--- a/src/index.css
+++ b/src/index.css
@@ -35,10 +35,11 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 12px 32px;
+
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
+  font-family: cursive;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
